{
    "name": "StrategyControls",
    "maps": [
        {
            "name": "TopDown",
            "id": "24fbcab1-b60a-4d7a-a0b2-fe17c8fc1bcf",
            "actions": [
                {
                    "name": "SetFlag",
                    "type": "PassThrough",
                    "id": "53f8bc76-2da3-4ccc-afb7-9325ed66c43f",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "MoveDrones",
                    "type": "Button",
                    "id": "4cad43be-e374-43d3-b131-5d222eb7ff10",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "RemoveFlag",
                    "type": "Button",
                    "id": "fcb30535-1c40-4feb-bedb-3a876d7fd6bb",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "SelectObject",
                    "type": "Button",
                    "id": "41d1e8b0-a5df-47ec-80b3-6d13b38a40f4",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "DropBomb",
                    "type": "Button",
                    "id": "53b8c778-2185-4897-ab47-f54e58c0101b",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "5c99ad84-1967-49f8-8247-795d4c3b9ab8",
                    "path": "<Mouse>/rightButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SetFlag",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "bd274ac4-ebeb-4cd7-98fe-c856284be56a",
                    "path": "<Keyboard>/m",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveDrones",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "4524c13e-e9b3-4fbf-a1a3-c99ae5969fb5",
                    "path": "<Keyboard>/f",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RemoveFlag",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "7b88b0d6-a6bc-4eec-bfdc-798be57eee25",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SelectObject",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "6fffeec7-f252-4f5f-909b-34c2f661defe",
                    "path": "<Keyboard>/b",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "DropBomb",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}